@@ -1,3 +1,8 @@
+Tue Oct 23 18:08:00 EDT 2007	JK Lowden <jklowden@freetds.org>
+	* src/tds/net.c 
+	- return from tds_select as if timed out on EINTR. 
+	- sqsh still unhappy when ^C pressed on long-running query. 
+
 Thu Oct 18 16:48:23 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/dblib.c: fix core
 
